cluster/core/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: main-gateway
    namespace: gateway
spec:
    gatewayClassName: cilium
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          hostname: "*.k8s.home.lab"
          allowedRoutes:
              namespaces:
                  from: All
        - name: https
          protocol: HTTPS
          port: 443
          hostname: "*.k8s.home.lab"
          allowedRoutes:
              namespaces:
                  from: All
          tls:
              mode: Terminate
              certificateRefs:
                  - kind: Secret
                    name: wildcard-cert
                    namespace: gateway
    addresses:
        - type: IPAddress
          value: "192.168.1.200"
